# F1Tenth-Autonomous-Racing

./: Dockerfile  README.md
LAB1-Introduction_docker_ros/: README.md
LAB1-Introduction_docker_ros/lab1_ws/src/lab1_pkg/: CMakeLists.txt
LAB1-Introduction_docker_ros/lab1_ws/src/lab1_pkg/src/: talker.cpp
LAB1-Introduction_docker_ros/lab1_ws/src/rc_car_bringup/config/: params.yaml
LAB1/lab1_ws/src/lab1_pkg/: package.xml
LAB1/lab1_ws/src/lab1_pkg/src/: relay.cpp
LAB1/lab1_ws/src/rc_car_bringup/: CMakeLists.txt
LAB2/: Dockerfile
LAB2-Emergency_Braking/: README.md
LAB2-Emergency_Braking/sim_ws/src/safety_node/: package.xml
LAB2-Emergency_Braking/sim_ws/src/safety_node/src/: SafetyNode.cpp
LAB2/sim_ws/src/safety_node/: CMakeLists.txt  package.xml
LAB3-Wall_Following/: README.md
LAB3-Wall_Following/sim_ws/src/car_controller/: CMakeLists.txt  package.xml
LAB3-Wall_Following/sim_ws/src/car_controller/src/: wall_follow_node.cpp
LAB4-Follow_The_Gap/: FollowTheGap.json  README.md
LAB4-Follow_The_Gap/sim_ws/src/car_controller/: CMakeLists.txt  package.xml
LAB4-Follow_The_Gap/sim_ws/src/car_controller/src/: gap_follow_node.cpp
lab1_ws/src/lab1_pkg/src/: relay.cpp  talker.cpp
lab1_ws/src/rc_car_bringup/: package.xml
lab1_ws/src/rc_car_bringup/launch/: start_rc_car.launch.py
